@@ -1,12 +1,21 @@
 AUX eric-snapshot-20090627-no-interactive.patch 731 RMD160 97aaa6ff75ee8d74fa3bfa2a7a7d5dae5a49c1c8 SHA1 305cdf893b40577750c46e0fb15c3a6057ca495c SHA256 562fca1c080d16b93e59236b9260f97ff5fc6e79cb25288def2e5849d42e65f2
 DIST eric4-4.4-snapshot-20090627.tar.gz 6579081 RMD160 1ba2dd40b118feccd9a63c27176f59931b77e44e SHA1 d96e3a4f912731de20e6ab3436d282c4e437e388 SHA256 4cb56306f89775c0f489508a0ae06a443201808c40241c5fedb5ba3455d087c5
+DIST eric4-4.4-snapshot-20090726.tar.gz 6667921 RMD160 55a5278d3de733349609823b24c990566584311f SHA1 91b85c40bbceec51ed727646e2f60af0ccf8e450 SHA256 cd702c3d40ef743d0949987642d1e551c9dc9cede2626cf832be8f6d8ff5f7ee
 DIST eric4-i18n-cs-4.4-snapshot-20090627.tar.gz 414073 RMD160 9b95f011abde07ba6d1c45bd2f9cdf3276d301ae SHA1 354d31ff5d28c343f6ef6585f2e6d05c5f742c18 SHA256 e40e7e4cad37257a988622887405e00d8c114b8fc29833dad4347d11297002a5
+DIST eric4-i18n-cs-4.4-snapshot-20090726.tar.gz 424690 RMD160 2ca5eb7d1c4f081bbd26bedf1a68e1d8b6e8a6a6 SHA1 159aef6a9522f604cfdfa543ffec8e991935e53c SHA256 90232bec706a532e676df6bf1cf7a71e298665240b1b316e66e448d526340853
 DIST eric4-i18n-de-4.4-snapshot-20090627.tar.gz 421395 RMD160 71b4dcb8f28cf6671cdc76fb4c586cc10d691532 SHA1 db158e71c36c39079c4192405fd04743b3c10f7c SHA256 ec4f7455267c6f550d94a4fa90f5266b7bfe47f2ae16a4ccd3c521bd9c2643cc
+DIST eric4-i18n-de-4.4-snapshot-20090726.tar.gz 428159 RMD160 4cc06d7d41c0824d3aca271c81c70973fa0b7c2b SHA1 b8ac43f37cdb7f16ff81f1001152dbdbfbbb18da SHA256 085ab3b0ebe0a08e467e8855efb0a062d2bfdc79ede074ce2aba0b20389fe754
 DIST eric4-i18n-es-4.4-snapshot-20090627.tar.gz 424480 RMD160 860b907824edd3e63c1281eef714b32e3441b06d SHA1 ba9a37510b3f7d46a5fae0bfed276edf2c389e19 SHA256 076dc42a76935e6f44500249273046d9e8a8e1581efd2328e7254cd550595234
+DIST eric4-i18n-es-4.4-snapshot-20090726.tar.gz 429076 RMD160 6c7d99dc030a319153a09330a08442728b1407f6 SHA1 d2cf34f3363d59134d23d30714b4320e7155f063 SHA256 86c463d9ce96bd832939ec841b9e070f38878eb1cce56b6431da7674d0e7f115
 DIST eric4-i18n-fr-4.4-snapshot-20090627.tar.gz 416783 RMD160 ad49b0580622d818d547d10118da23a516008af0 SHA1 9de14909ba87389428289f4dc241fe3c483f0fa8 SHA256 13e3893fbe7d4f6cae12dc017393665db52d242f4eedb2b4c96982677fa4455e
+DIST eric4-i18n-fr-4.4-snapshot-20090726.tar.gz 419667 RMD160 586baf89b414dba2c78f5ae9cf45c58fc450664f SHA1 6f633bd467ae0b7f628d1dd7077fba78dbf9e5d5 SHA256 01ab41bc8970405178f75bcd4b93f173201490a79f13623ae0f10c908ab2314e
 DIST eric4-i18n-ru-4.4-snapshot-20090627.tar.gz 407131 RMD160 83cd56eebdf379df8e95cb0109e3e1e25e5d4e1d SHA1 2aaf2014ba11a6883d73552337b8b5d96141b08c SHA256 3aaa4ae019282fe32128f6302179b63bd4534857515ae9d0e14e3b011f24fe46
+DIST eric4-i18n-ru-4.4-snapshot-20090726.tar.gz 410357 RMD160 b50ada6d3ec36ba5f5a41404b515a9688ed2cf6a SHA1 f363a65b32718169195b0eaf456be0e1e26ccd47 SHA256 8a7aaf173dcab8853e4ea23a055705cb197a3653ff3807aa04f233000e3cef9c
 DIST eric4-i18n-tr-4.4-snapshot-20090627.tar.gz 372900 RMD160 049d70c0f5b42736075ec550ac8e29ad8f147d7f SHA1 e0c354970b3d6bf70c856d0a997bf89a63c498b5 SHA256 a504ddb983117d152706119eb1d2348812554df751d5af39687c437af0e330be
+DIST eric4-i18n-tr-4.4-snapshot-20090726.tar.gz 375040 RMD160 236f7877b83984c6079e35cf23eb7cdf28f13575 SHA1 4a50f59266bd69643b5cfe79fe449d5908573257 SHA256 dd75df0ded528810811e548f271a41545b89b1c35a74ab7f95bdc04194a23a88
 DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090627.tar.gz 378523 RMD160 1dd6a4125a03e0fb94444ca9afda3b7a5293adb9 SHA1 b60536681563555d3d2ca380131fb35356ae7fcd SHA256 0afb98507c7b0313f15ed34db7764ec71ee6ba2f45855711341fcc76f805e68a
+DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090726.tar.gz 381675 RMD160 109f84c5a4185c229717e8d678281f2adf132dbc SHA1 f75b70f0123cef7f01acb0832beeedf1766272ff SHA256 e112b0f0298bb45fae2fa0bec61430f1aa2bbab430bc8b5d9c68f5e16cf9e4ad
 EBUILD eric-4.4_pre20090627.ebuild 2491 RMD160 2860202c9720272ba85824b2d79c041722a29bc9 SHA1 482d9e7c7f543dc8319c51cfe794888a2bd4bb87 SHA256 6c0bdbda75c5e24428db9a9e3c255ad76c32b24d256fc13452b69c3a30675044
-MISC ChangeLog 1805 RMD160 ed4dbce685e1c0606625d2cfa0447a68fe0ac9c5 SHA1 f33781df86258f4f701135e2a6cfa3f8a7ebe37b SHA256 59a93252173b3f0950651a275b6a30639c933c56cd631378539df5ad53733a73
+EBUILD eric-4.4_pre20090726.ebuild 2491 RMD160 2860202c9720272ba85824b2d79c041722a29bc9 SHA1 482d9e7c7f543dc8319c51cfe794888a2bd4bb87 SHA256 6c0bdbda75c5e24428db9a9e3c255ad76c32b24d256fc13452b69c3a30675044
+MISC ChangeLog 1943 RMD160 099d9d5d71da5155b575b523cf84dfca5958abb5 SHA1 9c064a6703df31db1ac06d61209a32537dfa914d SHA256 4e2e79dc68a301a3caa0d14fbebbc8441005c8b3f3c5be039e64e099ce4ff71f
 MISC metadata.xml 179 RMD160 887c899594fdaa3d82028c3d84188354d3784cd9 SHA1 551c6b2378ff31eadc1e4860211ec8709ce960bd SHA256 1fbdee58e0ba0f8730f6a27979cb7eeed8ebd3afa316d61b34a5f4893291a646
