@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*eric-4.4_pre20090726 (03 Aug 2009)
+
+  03 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
+  +eric-4.4_pre20090726.ebuild:
+  New snapshot
+
 *eric-4.3.5 (09 Jul 2009)
 
   09 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
